Touch ruler improvements
Change to touch manipulation behavior based on feedback from lemon. More
reliable and works with mouse and keyboard.

1) pinch scale changes the ruler size
2) manip the ruler around instead of measure between fingers

--- a/RealRuler/default.html
+++ b/RealRuler/default.html
@@ -17,7 +17,7 @@
     <div class="rulerBox" id="edgeRuler">
     </div>
     <div id="touchCanvas">
-        <div class="rulerBox" id="floatRuler">
+        <div class="rulerBox ManipulationElement" id="floatRuler">
             <div class="label"></div>
         </div>
     </div>
